# docstring-tuner

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt
artifacts/samples/: side_by_side.md
configs/: default.toml
docs/: LEARNINGS.md
notebooks/: train_colab.ipynb
src/docstring_tuner/: __init__.py  ast_utils.py  config.py  data.py  demo.py  evaluate.py  generate.py  judge.py  metrics.py  model.py  prompts.py  train.py
tests/: conftest.py  test_ast_utils.py  test_data.py  test_demo.py  test_evaluate.py  test_generate.py  test_judge_mock.py  test_metrics.py  test_prompts.py
