[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docstring-tuner"
version = "0.1.0"
description = "QLoRA fine-tuning of a small LLM to generate Google-style Python docstrings, with a base-vs-fine-tuned evaluation harness."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "paffon" }]
keywords = ["qlora", "lora", "peft", "docstrings", "llm", "fine-tuning"]

# Abstract runtime dependencies (floors). For reproducible installs use the
# pinned requirements files: requirements-cpu.txt (local) / requirements-gpu.txt (Colab).
dependencies = [
    "torch>=2.9",
    "transformers>=5.13",
    "trl>=1.7",
    "peft>=0.19",
    "accelerate>=1.14",
    "datasets>=4.7,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.11", "ruff>=0.6", "black>=24.8"]

[project.scripts]
dt-data = "docstring_tuner.data:main"
dt-train = "docstring_tuner.train:main"
dt-infer = "docstring_tuner.generate:main"
dt-eval = "docstring_tuner.evaluate:main"
dt-demo = "docstring_tuner.demo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
docstring_tuner = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
# Pragmatic: the heavy ML libs are largely untyped; don't let their `Any`
# returns produce noise. Our own code stays fully annotated under `strict`.
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "trl.*",
    "peft.*",
    "bitsandbytes.*",
    "datasets.*",
    "accelerate.*",
    "torch.*",
    "tqdm.*",
]
ignore_missing_imports = true

# numpy is only a transitive dependency (we never import it), but its 2.5+ stubs
# use PEP 695 `type` statements that mypy rejects while we target python 3.11.
# Don't follow into them — treat the module as Any rather than parse its stubs.
[[tool.mypy.overrides]]
module = ["numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.pyright]
# Same stance as the mypy config above: the ML libraries (transformers, peft,
# trl, datasets, torch) ship incomplete type information, so strict mode floods
# our own code with "type is unknown / partially unknown" noise that no
# annotation on our side can silence (e.g. `AutoTokenizer.from_pretrained` is
# itself partially typed). We turn off that family so real diagnostics —
# reportReturnType, reportCallIssue, reportOptionalMemberAccess, unused vars,
# etc. — stay visible. Our own code remains fully annotated under mypy strict.
include = ["src", "tests"]
exclude = ["notebooks"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownLambdaType = false
reportPrivateImportUsage = false

# Tests legitimately exercise module-private helpers (``_extract_json`` etc.).
[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
